# sovereign-swarm

./: .env.example  .gitignore  MIGRATION_RUNBOOK_V4_PHASE_0C.md  PHASE_0F_AUDIT.md  pyproject.toml
.claude/: CLAUDE.md
scripts/: swarm_vs_v2_accuracy.py
sovereign_swarm/: __init__.py  cli.py  config.py
sovereign_swarm/analytics/: __init__.py  channel.py  funnel.py  sequence.py
sovereign_swarm/audit/: logger.py  models.py  store.py
sovereign_swarm/calendar/: __init__.py  agent.py  models.py  scheduler.py
sovereign_swarm/communication/: __init__.py  agent.py  approval.py  models.py  template_engine.py
sovereign_swarm/competitive_intel/: __init__.py  agent.py  analyzer.py  models.py
sovereign_swarm/content/: __init__.py  agent.py  models.py  seo_scorer.py
sovereign_swarm/curation/: __init__.py  agent.py  dedup.py  freshness.py  models.py  reading_list.py  taxonomy.py
sovereign_swarm/digital_twin/: __init__.py  agent.py  cognitive_model.py  continuity.py  delegate.py  models.py
sovereign_swarm/document_intel/: __init__.py  agent.py  comparator.py  models.py  summarizer.py
sovereign_swarm/financial_ops/: __init__.py  agent.py  aggregator.py  models.py
sovereign_swarm/inbound/: __init__.py  matcher.py  publish_gate.py  router.py  sendgrid_parser.py
tests/: test_analytics.py  test_coordinator_dispatch.py  test_coordinator_factory.py  test_inbound.py  test_marketing_ensemble.py  test_marketing_phase2.py  test_mcp_prompt_injection.py  test_mcp_servers.py  test_publish_gate.py  test_sales_ops.py  test_support.py  test_web_agent.py
(+162 files in other folders)
