[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-swarm"
version = "0.1.0"
description = "Persistent adaptive learning multi-agent swarm for the Sovereign AI ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "orjson>=3.9",
    "aiosqlite>=0.19",
    "redis>=5.0",
    "httpx>=0.27",
    "networkx>=3.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
sovereign-swarm = "sovereign_swarm.cli:main"
